2022-07-07

	* oauth2-sample.ini
	  src/syl-auth-helper.c: added wildcard support for oauth2.ini.

2022-07-07

	* libsylph/imap.c
	  src/inc.c
	  src/send_message.c: don't ask password if OAuth2 is explicitly
	  specified.

2022-07-05

	* src/Makefile.am
	  libsylph/imap.[ch]
	  libsylph/libsylph-0.def
	  libsylph/oauth2.[ch]
	  libsylph/pop.[ch]
	  libsylph/prefs_account.[ch]
	  libsylph/smtp.[ch]
	  src/Makefile.am
	  src/prefs_account_dialog.c
	  src/send_message.c
	  src/syl-auth-helper.c
	  oauth2.ini.sample: added OAuth2 authentication mechanism.
	  Currently tested with Gmail/MS365: POP3/IMAP4/SMTP.
	  This feature depends on libcurl.

2020-05-29

	* libsylph/defs.h: modified URLs (http -> https).

2020-05-28

	* src/update_check.c: win32: fixed execution of update-manager.exe
	  by using ShellExecute() API instead of _spawn() to invoke UAC
	  elevation properly.
	  Directly open download URL with browser if the above failed.

2018-01-30

	* version 3.7.0

2018-01-16

	* version 3.7.0beta1

2018-01-16

	* src/about.c: updated copyright year.

2018-01-16

	* libsylph/folder.c 
	  src/gtkutils.c
	  src/import.c: fixed typos (thanks to Kentaro Hayashi) (#278).

2018-01-12

	* src/summaryview.c: summary_mark_displayed_read(): reset current
	  selection list when sorted by unread (fixes #286).

2017-12-14

	* src/exportcsv.c: exp_csv_file_move(): display error message if
	  file open failed.

2017-12-12

	* src/addressbook.c: disabled '/Tools/Export to CSV file' menu when
	  toplevel interface is selected.

2017-12-12

	* src/summaryview.c: show original From on the From column if
	  display-name contains '@' character.

2017-12-08

	* manual/ja/sylpheed.sgml: updated.

2017-11-30

	* src/exportcsv.c
	  src/importcsv.c
	  src/importldif.c: adjusted dialog layout to match other ones.

2017-11-30

	* libsylph/utils.c: strconcat_csv(): enclose fields in double quotes
	  if double quotes appear.
	* src/exportcsv.c: code cleanup. Added header line.

2017-11-29
