@@ -1,3 +1,7 @@
+2022-07-08
+
+	* src/syl-auth-helper.c: generate random state string and validate.
+
 2022-07-07
 
 	* oauth2-sample.ini
